css/base.css
* {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
}

body {
    font-family: "Geneva", arial, helvetica;
    font-size: 16px;
    line-height: 24px;
}

p {
    margin-bottom: 16px;
    margin-left: 0px;
}

header {
    background-color: #ffffff;
    padding-top: 20px;
}

header h1 {
    display: inline;
    text-align: right;
    font-family: "Geneva", arial, helvetica;
    font-size: 80px;
    padding-left: 35px;
    line-height: 80px;
}

.full {
    width: 100%;
    max-width: 700px;
    
}

.wrapper {
    max-width: 940px;
    margin: 0 auto;
}

header img {
    float: left;
    padding-top: none;
    padding-left: 10px;
    display: inline;
    
}


nav {
    text-align: center;
    font-size: 22px;
    padding: 10px;
    padding-bottom: 55px;
    margin-top: 20px;
}

nav a {
    text-decoration: none;  
    padding-left: 10px;
    padding-right: 10px;
}

nav a:link {
    color: #0099ff;
}

nav a:visited {
    color: #009999;
}

nav a:hover {
    text-decoration: underline;
}

#index h2 {
    line-height: 40px;
}

#index h2 {
        color: #0099ff;
}

header a {
    color: #7f7f7f;
    margin-right: 10px;
    text-decoration: none;
}

.headshot {
    max-width: 700px;
    margin: 0 auto;
    padding: 0 10px;
}

.myresume {
    text-align: center;
}


#portfolio section p, ul {
    display: inline;
    text-align: right;
}

#portfolio section {
    margin: 0px 21px 0px 10px;
}

#portfolio article {
    margin-bottom: 20px;
}

#portfolio h2 {
    text-align: right;   
}


#portfolio section {
    clear: both;
}


#portfolio section a:link {
    color: #0099ff;
}

#portfolio section a:visited {
    color: #009999;
}

#portfolio h2 {
    background-color: #808080;
    color: #ffffff;
    padding: 6px;
}

#about h3 {
    background-color: #808080;
    color: #ffffff;
    padding: 6px;
}

#about p a:link {
    color: #0099ff;
}

#about p a:visited {
    color: #009999;
}

.one-half {
    float: left;
    width: 40%;
    margin-right: 10%;
}

.one-third img {
    padding: 70px 0 0 40px;
}

.one-third {
    float: left;
    width: 30%;
    margin-right: 10%;
}

.two-thirds {
    width: 60%;
}

.two-thirds h2, .two-thirds p, .two-thirds ul {
    text-align: left;
}


article {
    float: right;
    padding: 0 10px 0 10px;
}

#about article {
    text-align: left;
    padding-top: 10px;
/* not sure why this text wouldn't align left on my page */
 
}

article h1 {
    font-size: 36px;
    line-height: 44px;
    margin-top: 4px;
}

article h2 {
    font-size: 24px;
    line-height: 24px;
    margin-bottom: 4px;
}

form {
    font-size: 16px;
    padding: 10px;
    line-height: 35px;
}

#contact div a:link {
    color: #0099ff;
}

#contact div a:visited {
    color: #009999;
}

footer {
    clear: both;
    font-size: 12px;
    padding: 0 10px 0 10px;
    background-color: #6f6f6f;
    color: #ffffff;
}


@media screen and (max-width: 600px) {

    
    header h2 {
        clear: both;
        font-size: 30px;
        text-align: center;
    }
    
    
    header h1  {
        font-size: 40px;
        text-align: center;
        margin-top: none;
        margin: 0;
        padding: 0;
    }
    
    header img {
        width: 30%;
        height: auto;
    }
    
    nav {
        width: 90%;
    }
    
    nav a {
        display: block;
        width: 100%;
        clear: both;
        float: left;
    }
    
    .one-third img {
        width: 130%;
}
    
    #about {
        width: 90%;
        clear: left;
    }
    
    
    
    
    
}

